yaml/prod/soundbuzz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subsonic
spec:
  replicas: 1
  selector:
   matchLabels:
    app: subsonic
  template:
    metadata:
      labels:
        app: subsonic
    spec:
      volumes:
      - name: subsonic
        persistentVolumeClaim:
          claimName: subsonic-pvc
      - name: music
        persistentVolumeClaim:
          claimName: music-pvc
      containers:
      - name: subsonic
        image: hurricane/subsonic
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: subsonic
          mountPath: /subsonic
        - name: music
          mountPath: /music
---
apiVersion: v1
kind: Service
metadata:
  name: subsonic-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: subsonic
