yaml/prod/soundbuzz-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: soundbuzz-redirect-scheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: soundbuzz-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.sound-buzz.live`)
      kind: Rule
      middlewares:
        - name: soundbuzz-redirect-scheme      
      services:
        - name: subsonic-svc
          port: 443

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: soundbuzz-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.sound-buzz.live`)
      kind: Rule     
      services:
        - name: subsonic-svc
          port: 443
  tls:
    certResolver: pebble
